--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ futures = "0.3"
 async-trait = "0.1"
 hex = "0.4.3"
 rand = "0.8.5"
+reqwest = { version = "0.11", features = ["json", "blocking"] }
